<resources>
    <string name="app_name">Blood Presssure</string>
    <string name="click_for_register">Click để đăng ký</string>
    <string name="swipe_right_for_login">Click để đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="tag">Let\'s start to take care of the health</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="age">Tuổi</string>
    <string name="full_name">Họ tên</string>
    <string name="tel">Số điện thoại</string>
    <string name="disease_name">Bệnh</string>
    <string name="room">Phòng</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">BloodPressure</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Welcome to manager</string>
    <string name="move_list_user">Danh sách bệnh nhân</string>
    <string name="move_list_room">Quản lý phòng bệnh</string>
    <string name="move_list_news">Bản tin</string>
    <string name="menu">Menu</string>
    <string name="move_list_static">Đồ thị kết quả</string>
    <string name="title_activity_news">Bản tin</string>
    <string name="title_activity_rooms">Danh sách phòng</string>
    <string name="edit_user">Chỉnh sửa thông tin bệnh nhân</string>
    <string name="btn_save">Lưu</string>
    <string name="room_id">Mã Phòng</string>
    <string name="room_name">Tên phòng</string>
    <string name="create">Tạo</string>
    <string name="title_add_room">Thêm phòng mới</string>
    <string name="news_content">Nội dung tin</string>
    <string name="news_title">Tiêu đề tin</string>
    <string name="add_news_title">Tạo tin mới</string>
    <string name="todo">TODO</string>
    <string name="blood_pressure">Welcome to BloodPressure Manager</string>
    <string name="static_title">Thống kê dữ liệu</string>
    <string name="message_result">Đồ thị kết quả đo gần nhất</string>
    <string name="detail_infor_title">Thông tin chi tiết bệnh nhân</string>
    <string name="basic_detail">Đi tới thông tin cơ bản</string>
    <string name="history_result">Đi tới lịch sử kiểm tra</string>
    <string name="user_id">Mã bệnh nhân</string>
    <string name="list_user_title">Danh sách người bệnh</string>
    <string name="mesage_delete_user">Ấn giữ để xóa người dùng!</string>
    <string name="move_to_room_title">Chuyển phòng bệnh nhân</string>
    <string name="choose_room">Chọn phòng mới</string>
    <string name="max_pressure">Huyết áp tâm thu</string>
    <string name="min_pressure">Huyết áp tâm trương</string>
    <string name="btn_name_user_information">Thông tin người dùng</string>
    <string name="title_user_menu">Welcome to BloodPressure User</string>
    <string name="label_room_user">Danh sách phòng bệnh</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="basic_detail_mess">Thông tin người dùng</string>
    <string name="history_detail">Thông tin lịch sử đo</string>
    <string name="press_to_delete">Ấn giữ để xóa phòng!</string>
    <string name="home">Màn hình chính</string>
    <string name="reset">Cập nhật dữ liệu</string>
    <string name="about">Giới thiệu</string>
    <string name="help">Trợ giúp</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="author_name">Blood pressure manager</string>
    <string name="label_email">bloodpressure@gmail.com</string>
    <string name="export">Xuất dữ liệu</string>
    <string name="my_message">Thông báo của tôi</string>
    <string name="logout">Đăng xuất</string>
    <string name="room_item">Phòng bệnh</string>
    <string name="news_item">Bản tin</string>
    <string name="analyst_item">Phân tích</string>
    <string name="nearest_check">Lần kiểm tra gần nhất</string>
    <string name="heart_beat">Nhịp tim</string>
    <string name="message_analyst">Thống kê dữ liệu bệnh nhân</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="use_analyst_age">Phân tích theo tuổi</string>

    <string name="export_user">Tùy chọn xuất dữ liệu người dùng</string>
    <string name="all">Tất cả</string>
    <string name="a_10">10 bản ghi gần nhất</string>
    <string name="a_50">50 bản ghi gần nhất</string>
    <string name="export_user_des">Lưu ý: file dữ liệu được xuất ra sẽ có tên theo format: {0}_user_{1}\n
        Với {0} - all/50/10 \n\t\t\t
        {1} - ngày xuất file</string>
    <string name="a_3_time">3 lần đo gần nhất</string>
    <string name="one_file">Chỉ xuất 1 file</string>
    <string name="a_7_time">7 lần đo gần nhất</string>
    <string name="a_10_time">10 lần đo gần nhất</string>
    <string name="export_pressure">Tùy chọn xuất dữ liệu kết quả đo</string>

    <string name="search_by_name">Tìm kiếm tên</string>
    <string name="search">OK</string>
    <string name="label_setting_pressure">Thiết lập chỉ số đo</string>
    <string name="access_web">Truy cập trang web</string>
    <string name="go">Đi tới</string>
    <string name="update">Cập nhật</string>
    <string name="standard_min">Ngưỡng tâm trương giới hạn</string>
    <string name="standard_max">Ngưỡng tâm thu giới hạn</string>
    <string name="setting_number_standard">Thiết lập ngưỡng an toàn</string>
    <string name="updating">Dữ liệu chưa được cập nhật</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>