<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@mipmap/btn_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/reset"
        android:icon="@mipmap/btn_reset"
        android:title="@string/reset"
        app:showAsAction="withText" />
    <item
        android:id="@+id/about"
        android:icon="@mipmap/btn_about"
        android:title="@string/about"
        app:showAsAction="withText" />
    <item
        android:id="@+id/help"
        android:icon="@mipmap/btn_help"
        android:title="@string/help"
        app:showAsAction="withText" />

</menu>