<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dff9fb">

    <LinearLayout
        android:id="@+id/detailUserFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controllers.DetailUserActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_25"
            android:gravity="center"
            android:text="@string/setting_number_standard"
            android:textSize="@dimen/txt_s_25" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/no_data_color"
                android:textSize="@dimen/txt_s_15" />

            <EditText
                android:id="@+id/min_standard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_60"
                android:layout_marginLeft="@dimen/m_20"
                android:layout_marginTop="@dimen/m_10"
                android:layout_marginRight="@dimen/m_20"
                android:autofillHints="@string/room_id"
                android:background="@drawable/et_custom"
                android:focusable="true"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/standard_min"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/p_10"
                android:textSize="@dimen/txt_s_20" />


            <EditText
                android:id="@+id/max_standard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_60"
                android:layout_marginLeft="@dimen/m_20"
                android:layout_marginTop="@dimen/m_10"
                android:layout_marginRight="@dimen/m_20"
                android:autofillHints="@string/room_name"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/standard_max"
                android:inputType="number"
                android:maxLength="3"
                android:padding="@dimen/p_10"
                android:textSize="@dimen/txt_s_20"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="@dimen/m_20"
            android:layout_marginTop="@dimen/m_300"
            android:layout_marginRight="@dimen/m_20"
            android:layout_marginBottom="@dimen/m_10"
            android:background="@drawable/btn_custom"
            android:textColor="@color/white"
            android:text="@string/update"
            android:textSize="@dimen/txt_s_20" />

        <!--        <include-->
        <!--            android:id="@+id/tool_bar2"-->
        <!--            layout="@layout/toolbar_layout" />-->
    </LinearLayout>

    <include
        android:id="@+id/nav_view"
        layout="@layout/navigation_layout" />
</androidx.drawerlayout.widget.DrawerLayout>